--- a/index.html
+++ b/index.html
@@ -11,11 +11,48 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sora:wght@100..800&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap"
             rel="stylesheet"
         />
     </head>
     <body>
-        <h1>Setup</h1>
+        <header class="header">
+            <div class="container">
+                <div class="header__body">
+                    <img
+                        src="./assets/img/Logo.svg"
+                        alt="Lucy"
+                        class="header__logo"
+                    />
+                    <!-- navbar -->
+                    <nav class="navbar">
+                        <ul class="navbar__list">
+                            <li class="navbar__item">
+                                <a href="" class="navbar__link">Home</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="" class="navbar__link">About</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="" class="navbar__link"
+                                    >Services & Rates</a
+                                >
+                            </li>
+                            <li class="navbar__item">
+                                <a href="" class="navbar__link">Review</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="" class="navbar__link">Contacts us</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a class="header__btn">Sign up</a>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
