--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
         <header class="header">
             <div class="container">
-                <div class="header__body">
+                <div class="header__row">
                     <img
                         src="./assets/img/Logo.svg"
                         alt="Lucy"
@@ -52,6 +52,82 @@
                     </nav>
                     <a class="header__btn">Sign up</a>
                 </div>
+                <!-- Hero -->
+                <section class="hero">
+                    <figure class="hero__imagine">
+                        <div class="hero__cat--bg">
+                            <img
+                                src="./assets/img/hero__cat.svg"
+                                alt="cat"
+                                class="hero__img1"
+                            />
+                        </div>
+                        <div class="hero__dog--bg">
+                            <img
+                                src="./assets/img/hero__dog.svg"
+                                alt="dog"
+                                class="hero__img2"
+                            />
+                        </div>
+                        <div class="hero-pet__info">
+                            <div class="hero-pet__item">
+                                <img
+                                    src="./assets/img/pet-health.svg"
+                                    alt="pet health"
+                                    class="hero-pet__img"
+                                />
+                                <div class="hero-pet__column">
+                                    <strong class="hero-pet__heading"
+                                        >Pet Health</strong
+                                    >
+                                    <div class="hero-pet__desc1"></div>
+                                    <div class="hero-pet__desc2"></div>
+                                </div>
+                            </div>
+
+                            <div class="hero-pet__line"></div>
+
+                            <div class="hero-pet__item">
+                                <img
+                                    src="./assets/img/pet-care.svg"
+                                    alt="pet care"
+                                    class="hero-pet__img"
+                                />
+                                <div class="hero-pet__column">
+                                    <strong class="hero-pet__heading"
+                                        >Pet Care</strong
+                                    >
+                                    <div class="hero-pet__desc1"></div>
+                                    <div class="hero-pet__desc2"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </figure>
+                    <img
+                        src="./assets/img/gradient1.svg"
+                        alt="gradient 1"
+                        class="hero__gradient-1"
+                    />
+                    <img
+                        src="./assets/img/gradient2.svg"
+                        alt="gradient 2"
+                        class="hero__gradient-2"
+                    />
+                    <div class="hero__info">
+                        <h1 class="hero__heading">
+                            Established & Trusted Pet Care Service
+                        </h1>
+                        <p class="hero__desc">
+                            Discover a wide variety of Pawsitive services to
+                            choose from, including daycare, private walks,
+                            office duty and spa.
+                        </p>
+                        <div class="hero__info--row">
+                            <div class="hero__btn">Book a Meet</div>
+                            <a href="" class="hero__link">Schedule a Call</a>
+                        </div>
+                    </div>
+                </section>
             </div>
         </header>
     </body>
