--- a/index.html
+++ b/index.html
@@ -130,5 +130,60 @@
                 </section>
             </div>
         </header>
+        <main>
+            <!-- About -->
+            <section class="about">
+                <div class="container">
+                    <div class="about__body">
+                        <div class="about__info">
+                            <p class="about__title">// About //</p>
+                            <h2 class="about__heading">
+                                Best Agency For Your Pet.
+                            </h2>
+                            <p class="about__desc">
+                                Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <div class="about__row">
+                                <p class="about__info-checked">
+                                    Certified Groomer
+                                </p>
+                                <p class="about__info-checked">Animal Lover</p>
+                                <p class="about__info-checked">
+                                    14+ Years Experience
+                                </p>
+                                <p class="about__info-checked">
+                                    Pet Parent Of 3 Dogs
+                                </p>
+                            </div>
+                        </div>
+                        <figure class="about__image">
+                            <div class="about__image-bg">
+                                <img
+                                    src="./assets/img/about_img1.svg"
+                                    alt="20+ year experience"
+                                    class="about__img"
+                                />
+                                <img
+                                    src="./assets/img/about__img2.svg"
+                                    alt="img2"
+                                    class="about__img2"
+                                />
+                            </div>
+                            <div class="about__exp">
+                                <img
+                                    src="./assets/img/pet-foot.svg"
+                                    alt="pet-foot"
+                                    class="pet-foot"
+                                />
+                                <p class="about__exp-year">20+</p>
+                                <p class="about__exp-desc">Years Experience</p>
+                            </div>
+                        </figure>
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
