--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         />
     </head>
     <body>
+        <!-- Header -->
         <header class="header">
             <div class="container">
                 <div class="header__row">
@@ -181,6 +182,75 @@
                                 <p class="about__exp-desc">Years Experience</p>
                             </div>
                         </figure>
+                    </div>
+                </div>
+            </section>
+            <!-- Rent -->
+            <section class="rent">
+                <div class="container">
+                    <div class="rent__body">
+                        <figure class="rent__image">
+                            <div class="rent__img-bg">
+                                <img
+                                    src="./assets/img/rent__img.svg"
+                                    alt="2 dogs"
+                                    class="rent__img"
+                                />
+                                <img
+                                    src="./assets/img/rent__img-deco1.svg"
+                                    alt="deco1"
+                                    class="rent__img-deco1"
+                                />
+                                <img
+                                    src="./assets/img/rent__img-deco2.svg"
+                                    alt=""
+                                    class="rent__img-deco2"
+                                />
+                                <img
+                                    src="./assets/img/rent__img-deco3.svg"
+                                    alt=""
+                                    class="rent__img-deco3"
+                                />
+                                <img
+                                    src="./assets/img/rent__img-deco4.svg"
+                                    alt=""
+                                    class="rent__img-deco4"
+                                />
+                                <img
+                                    src="./assets/img/rent__img-deco5.svg"
+                                    alt=""
+                                    class="rent__img-deco5"
+                                />
+                                <img
+                                    src="./assets/img/rent__img-deco6.svg"
+                                    alt=""
+                                    class="rent__img-deco6"
+                                />
+                            </div>
+                        </figure>
+                        <section class="rent__info">
+                            <h2 class="rent__heading">
+                                Taking A Vacation? So Is Your Pet.
+                            </h2>
+                            <p class="rent__desc">
+                                We offer long-term and short-term boarding.
+                                Every dog has its own private, spacious room and
+                                daily individual time in our large play yard.
+                            </p>
+                            <div class="rent__row">
+                                <h3 class="rent__type rent__type-active">
+                                    Pet Boarding
+                                </h3>
+                                <h3 class="rent__type">Pet Daycare</h3>
+                                <h3 class="rent__type">Pet Transport</h3>
+                            </div>
+                            <div class="rent__line"></div>
+                            <p class="rent__sub-desc">
+                                While you're on holiday, here's where your furry
+                                friends will spend their time.
+                            </p>
+                            <a href="" class="rent__more">View more</a>
+                        </section>
                     </div>
                 </div>
             </section>
