--- a/index.html
+++ b/index.html
@@ -254,6 +254,132 @@
                     </div>
                 </div>
             </section>
+            <!-- Services -->
+            <section class="service">
+                <div class="container">
+                    <div class="service__body">
+                        <p class="service__question">What we do for you?</p>
+                        <h2 class="service__heading">Our Services</h2>
+                        <div class="service__column">
+                            <!-- Column1 -->
+                            <div class="service__list">
+                                <!-- Item 1.1 -->
+                                <article class="service__item">
+                                    <div class="service__content">
+                                        <h3 class="service__item--heading">
+                                            Puppy Sitting
+                                        </h3>
+                                        <p class="service__item--desc">
+                                            Helping your new pup to be a good
+                                            boy or girl isn’t always easy, but
+                                            we’re here to help.
+                                        </p>
+                                        <a href="" class="service__item--link"
+                                            >Read More</a
+                                        >
+                                    </div>
+                                </article>
+                                <!-- Item 1.2 -->
+                                <article class="service__item">
+                                    <div class="service__content">
+                                        <h3 class="service__item--heading">
+                                            Dog Walking
+                                        </h3>
+                                        <p class="service__item--desc">
+                                            Choose from a 30, 45, or 60-minute
+                                            visit to give your pet their daily
+                                            dose of fun-filled.
+                                        </p>
+                                        <a href="" class="service__item--link"
+                                            >Read More</a
+                                        >
+                                    </div>
+                                </article>
+                                <!-- Item 1.3 -->
+                                <article class="service__item">
+                                    <div class="service__content">
+                                        <h3 class="service__item--heading">
+                                            Pet Sitting
+                                        </h3>
+                                        <p class="service__item--desc">
+                                            While you’re away we can make sure
+                                            your pet has all the food, water,
+                                            exercise, and, of course.
+                                        </p>
+                                        <a href="" class="service__item--link"
+                                            >Read More</a
+                                        >
+                                    </div>
+                                </article>
+                            </div>
+                            <!-- Column 2 -->
+                            <figure class="service__image">
+                                <div class="service__img-bg">
+                                    <img
+                                        src="./assets/img/service__img.svg"
+                                        alt="service__img"
+                                        class="service__img"
+                                    />
+                                </div>
+                                <div class="service__btn btn">
+                                    View All Services
+                                </div>
+                            </figure>
+                            <!-- Column 3 -->
+                            <div class="service__list">
+                                <!-- Item 3.1 -->
+                                <article class="service__item">
+                                    <div class="service__content">
+                                        <h3 class="service__item--heading">
+                                            Overnight Care
+                                        </h3>
+                                        <p class="service__item--desc">
+                                            If you’re away for the night, we can
+                                            stay the night or stop by in the
+                                            evening and morning.
+                                        </p>
+                                        <a href="" class="service__item--link"
+                                            >Read More</a
+                                        >
+                                    </div>
+                                </article>
+                                <!-- Item 3.2 -->
+                                <article class="service__item">
+                                    <div class="service__content">
+                                        <h3 class="service__item--heading">
+                                            Pet Taxi
+                                        </h3>
+                                        <p class="service__item--desc">
+                                            Does your pet need a lift to the
+                                            groomers, vet, or dog park? We’ve
+                                            got their tail covered.
+                                        </p>
+                                        <a href="" class="service__item--link"
+                                            >Read More</a
+                                        >
+                                    </div>
+                                </article>
+                                <!-- Item 3.3 -->
+                                <article class="service__item">
+                                    <div class="service__content">
+                                        <h3 class="service__item--heading">
+                                            Pet Medical Admin
+                                        </h3>
+                                        <p class="service__item--desc">
+                                            Our team of experienced
+                                            professionals can help with
+                                            everything from pills to injections.
+                                        </p>
+                                        <a href="" class="service__item--link"
+                                            >Read More</a
+                                        >
+                                    </div>
+                                </article>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
