--- a/index.html
+++ b/index.html
@@ -380,6 +380,96 @@
                     </div>
                 </div>
             </section>
+            <!-- Staff -->
+            <section class="staff">
+                <div class="container">
+                    <div class="staff__body">
+                        <h2 class="staff__title">Pet Care Staff</h2>
+                        <h3 class="staff__heading">Meet Our Groomers</h3>
+                        <div class="staff__row">
+                            <ul class="staff__list">
+                                <!-- Member 1 -->
+                                <li class="staff__member">
+                                    <div class="staff__member--bg">
+                                        <img
+                                            src="./assets/img/member1.svg"
+                                            alt="Meghan Samit"
+                                            class="staff__img"
+                                        />
+                                        <img
+                                            src=""
+                                            alt=""
+                                            class="staff__deco"
+                                        />
+                                    </div>
+                                    <p class="staff__role">Pet Trainer</p>
+                                    <strong class="staff__name"
+                                        >Meghan Samit</strong
+                                    >
+                                </li>
+                                <!-- Member 2 -->
+                                <li class="staff__member">
+                                    <div class="staff__member--bg">
+                                        <img
+                                            src="./assets/img/member2.svg"
+                                            alt="Alissa Silva"
+                                            class="staff__img"
+                                        />
+                                        <img
+                                            src=""
+                                            alt=""
+                                            class="staff__deco"
+                                        />
+                                    </div>
+                                    <p class="staff__role">Veterinarian</p>
+                                    <strong class="staff__name"
+                                        >Alissa Silva</strong
+                                    >
+                                </li>
+                                <!-- Member 3 -->
+                                <li class="staff__member">
+                                    <div class="staff__member--bg">
+                                        <img
+                                            src="./assets/img/member3.svg"
+                                            alt="Cindy Harris"
+                                            class="staff__img"
+                                        />
+                                        <img
+                                            src=""
+                                            alt=""
+                                            class="staff__deco"
+                                        />
+                                    </div>
+                                    <p class="staff__role">Veterinarian</p>
+                                    <strong class="staff__name"
+                                        >Cindy Harris</strong
+                                    >
+                                </li>
+                                <!-- Member 4 -->
+                                <li class="staff__member">
+                                    <div class="staff__member--bg">
+                                        <img
+                                            src="./assets/img/member4.svg"
+                                            alt="Lucas Tony"
+                                            class="staff__img"
+                                        />
+                                        <img
+                                            src=""
+                                            alt=""
+                                            class="staff__deco"
+                                        />
+                                    </div>
+                                    <p class="staff__role">Animal Caretaker</p>
+                                    <strong class="staff__name"
+                                        >Lucas Tony</strong
+                                    >
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="staff__btn btn">View All Team</div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
