--- a/index.html
+++ b/index.html
@@ -470,6 +470,130 @@
                     </div>
                 </div>
             </section>
+            <!-- Choice -->
+            <section class="choice">
+                <div class="container">
+                    <div class="choice__body">
+                        <h2 class="choice__heading">The Best Choice</h2>
+                        <p class="choice__desc">
+                            We offer long-term and short-term boarding. Every
+                            dog has its own private, spacious room and daily
+                            individual time in our large play yard.
+                        </p>
+                        <div class="choice__option">Monthly</div>
+                        <ul class="choice__list">
+                            <!-- Option 1 -->
+                            <li class="choice__item">
+                                <div class="choice__item--content">
+                                    <p class="choice__item-title">Basic</p>
+                                    <h3 class="choice__item-heading">
+                                        Day care
+                                    </h3>
+                                    <span class="choice__cost">$150</span>
+                                    <div class="choice__cta btn">
+                                        Purchase Now
+                                    </div>
+                                    <ul class="choice__adv">
+                                        <li class="choice__adv-item">
+                                            Single room
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Socialist Exercise
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Custom Meals
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Spa and Grooming
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Exercise 2x
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Custom Meals
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Grooming 2x
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <!-- Option 2 -->
+                            <li class="choice__item">
+                                <div class="choice__item--content">
+                                    <p class="choice__item-title">Exclusive</p>
+                                    <h3 class="choice__item-heading">
+                                        2X Care
+                                    </h3>
+                                    <span class="choice__cost">$199</span>
+                                    <div class="choice__cta btn">
+                                        Purchase Now
+                                    </div>
+                                    <ul class="choice__adv">
+                                        <li class="choice__adv-item">
+                                            Single room
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Socialist Exercise
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Custom Meals
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Spa and Grooming
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Exercise 2x
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Custom Meals
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Grooming 2x
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <!-- Option 3 -->
+                            <li class="choice__item">
+                                <div class="choice__item--content">
+                                    <p class="choice__item-title">Platinum</p>
+                                    <h3 class="choice__item-heading">
+                                        4X Care
+                                    </h3>
+                                    <span class="choice__cost">$299</span>
+                                    <div class="choice__cta btn">
+                                        Purchase Now
+                                    </div>
+                                    <ul class="choice__adv">
+                                        <li class="choice__adv-item">
+                                            Single room
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Socialist Exercise
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Custom Meals
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Spa and Grooming
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Exercise 2x
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Custom Meals
+                                        </li>
+                                        <li class="choice__adv-item">
+                                            Grooming 2x
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
