--- a/index.html
+++ b/index.html
@@ -615,6 +615,85 @@
                 </div>
             </section>
             <!-- Review -->
+            <section class="review">
+                <div class="container">
+                    <div class="review__body">
+                        <div class="review__cta">
+                            <svg
+                                width="20"
+                                height="20"
+                                viewBox="0 0 20 20"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M16.875 9.99854H3.125"
+                                    stroke="currentColor"
+                                    stroke-width="1.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                                <path
+                                    d="M8.75 4.37354L3.125 9.99854L8.75 15.6235"
+                                    stroke="currentColor"
+                                    stroke-width="1.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </div>
+                        <div class="review__bg">
+                            <img
+                                src="./assets/img/review__img.svg"
+                                alt="review__img"
+                                class="review__img"
+                            />
+                        </div>
+                        <div class="review__info">
+                            <h2 class="review__heading">Our Reviews</h2>
+                            <p class="review__desc">
+                                “It was very comforting to recieve a text and
+                                pics each day about our pets and how they were
+                                doing. It was also nice that my pets were in the
+                                comfortable environment of their own home and
+                                received playfull attention from our pet sitters
+                                as well. Thanks so much!”
+                            </p>
+                            <p class="review__name">Karla Deras</p>
+                        </div>
+                        <div class="review__cta">
+                            <svg
+                                width="20"
+                                height="20"
+                                viewBox="0 0 20 20"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M16.875 9.99854H3.125"
+                                    stroke="currentColor"
+                                    stroke-width="1.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                                <path
+                                    d="M8.75 4.37354L3.125 9.99854L8.75 15.6235"
+                                    stroke="currentColor"
+                                    stroke-width="1.5"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="review__page">
+                        <div class="review__line"></div>
+                        <div class="review__dot"></div>
+                        <div class="review__dot"></div>
+                        <div class="review__dot"></div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
