--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Lucy</title>
+        <title>Lucy - Established & Trusted Pet Care Service</title>
         <!-- Favicon -->
         <link
             rel="icon"
@@ -691,6 +691,84 @@
                         <div class="review__dot"></div>
                         <div class="review__dot"></div>
                         <div class="review__dot"></div>
+                    </div>
+                </div>
+            </section>
+            <!-- Blog -->
+            <section class="blog">
+                <div class="container">
+                    <div class="blog__body">
+                        <div class="blog__row">
+                            <h2 class="blog__heading">Our Blog</h2>
+                            <div class="blog__all">
+                                <p class="blog__cap">
+                                    Stay up to date with the latest tech trands
+                                    and news in the pets.
+                                </p>
+                                <div class="blog__btn btn">View All Blog</div>
+                            </div>
+                        </div>
+                        <div class="blog__list">
+                            <!-- Blog 1 -->
+                            <article class="blog__item">
+                                <div class="blog__item-bg bg-blue">
+                                    <p class="blog__date">21 june 2021</p>
+                                    <img
+                                        src="./assets/img/blog1.png"
+                                        alt="blog__img"
+                                        class="blog__img"
+                                    />
+                                </div>
+                                <h3 class="blog__title">
+                                    Building Bonds and Trusting Relationships
+                                    with Your Pets.
+                                </h3>
+                                <p class="blog__desc">
+                                    There isn’t a relationship around that can
+                                    survive without trust. My relationship with
+                                    my dog Peyton is deep...
+                                </p>
+                            </article>
+                            <!-- Blog 2 -->
+                            <article class="blog__item">
+                                <div class="blog__item-bg bg-orange">
+                                    <p class="blog__date">28 june 2021</p>
+                                    <img
+                                        src="./assets/img/blog2.png"
+                                        alt="blog__img"
+                                        class="blog__img"
+                                    />
+                                </div>
+                                <h3 class="blog__title">
+                                    Celebrity pet photographer Grace Chon on
+                                    taking ...
+                                </h3>
+                                <p class="blog__desc">
+                                    Doting pet parents have a relentless need to
+                                    constantly photograph every adorable pet
+                                    moment...
+                                </p>
+                            </article>
+                            <!-- Blog 3 -->
+                            <article class="blog__item">
+                                <div class="blog__item-bg bg-blue2">
+                                    <p class="blog__date">10 july 2021</p>
+                                    <img
+                                        src="./assets/img/blog3.png"
+                                        alt="blog__img"
+                                        class="blog__img"
+                                    />
+                                </div>
+                                <h3 class="blog__title">
+                                    5 Simple Tricks To Create A More Conscious
+                                    ...
+                                </h3>
+                                <p class="blog__desc">
+                                    It is easy to forget that animals are living
+                                    creatures with a beating heart.
+                                </p>
+                            </article>
+                        </div>
                     </div>
                 </div>
             </section>
